# venue-flow-edd

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README-zh.md  README.md  run.sh
api/: Cargo.toml
app/: Cargo.toml
app/src/: app_error.rs  lib.rs
app/src/app_error/: mod.rs  rental_error.rs  user_error.rs  venue_error.rs
app/src/app_event/: mod.rs
app/src/commands/: mod.rs  rental_commands.rs  user_commands.rs  venue_commands.rs
app/src/querys/: mod.rs  user_querys.rs  venue_querys.rs
app/src/use_case/: mod.rs  rental.rs  user.rs  venue.rs
app/src/use_case/rental/: cancel_rental_request.rs  create_rental_request.rs  get_rental_requests.rs  process_rental_request.rs  update_rental_time.rs
app/src/use_case/user/: get_lessor.rs  get_organizer.rs  get_user_detail.rs  login.rs  mod.rs  register_user.rs  update_user.rs
app/src/use_case/venue/: create_venue.rs  get_venue.rs  get_venue_by_user.rs  get_venue_list.rs  manage_venue_status.rs  update_venue.rs
app/tests/: cancel_rental_request_test.rs  common.rs  create_rental_request_test.rs  create_venue_test.rs  generate_test_file.hs  login_test.rs  manage_venue_status_test.rs  process_rental_request_test.rs  register_user_test.rs  rental_common.rs  update_rental_time_test.rs  update_user_test.rs  update_venue_test.rs  user_common.rs  venue_common.rs
app/tests/common/: mod.rs  rental_common.rs  user_common.rs  util_common.rs  venue_common.rs
domain/: Cargo.toml
event/: Cargo.toml
event/src/: consumer.rs  dispatcher.rs  event_error.rs  lib.rs  poller.rs  queue.rs
event/src/event_service/: email_service.rs
infra/: Cargo.toml
infra/src/: config.rs  infra_error.rs  lib.rs  main.rs  queue.rs
infra/src/api/: mod.rs  rental.rs  response_code.rs  user.rs  venue.rs
infra/src/api/example/: file_upload.rs  mod.rs
infra/src/api/middleware/: encrypt.rs
infra/src/api/middleware/encrypt/: mod.rs
infra/src/api/rental/: cannel_rental_req.rs  create_rental_req.rs  get_rental_reqs.rs  process_rental_req.rs  update_rental_time.rs
infra/src/api/user/: get_user_profile.rs  login.rs  register.rs  update_profile.rs
infra/src/api/venue/: create_venue.rs  get_venue.rs  get_venue_by_user.rs  get_venue_list.rs  manage_venue_status.rs  update_venue.rs  upload_venue_image.rs
infra/src/config/: config.rs  mod.rs
infra/src/database/: config.rs  entities_reload.sh  mod.rs
infra/src/database/entities/: lessor.rs  mod.rs  organizer.rs  prelude.rs  rental_request.rs  sea_orm_active_enums.rs  user.rs  venue.rs  venue_image_uri.rs
infra/src/local_log/: mod.rs
infra/src/oss/: mod.rs
infra/src/queue/: config.rs  queue_error.rs
infra/src/repositroy/: image_file.rs  mod.rs  oss.rs  redis.rs
infra/src/repositroy/oss/: config.rs  image_file.rs  mod.rs
infra/src/repositroy/redis/: config.rs
infra/src/service/: mod.rs  rental_service.rs  user_service.rs  util_service.rs  venue_service.rs
infra/src/service/rental_service/: enum_converstion.rs
infra/src/service/user_service/: enum_converstion.rs
infra/src/service/venue_service/: enum_converstion.rs
infra/src/web/: app_state.rs  error_handle.rs  mod.rs
infra/src/web/http/: mod.rs
infra/src/web/http/example/: file_upload.rs  mod.rs
(+85 files in other folders)
