[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive"] }
garde = { version = "0.22.0", features = ["full"] }

domain = {path = "../domain"}
domain_core = {path = "../domain_core"}

[dev-dependencies]
async-trait = "0.1.88"
mockall = "0.13.1"
