[package]
name = "event"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_core = {path = "../domain_core"}
domain = {path = "../domain"}
app = {path = "../app"}

thiserror = "2.0.12"
tracing = "0.1.41"
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread","test-util","full"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"


[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
